--- a/package.json
+++ b/package.json
@@ -10,10 +10,36 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@types/dlv": "^1.1.2",
+    "@types/react": "^16.9.19",
+    "@types/react-redux": "^7.1.7",
+    "@types/styled-components": "^4.4.3",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "babel-preset-expo": "~8.0.0",
+    "dlv": "^1.1.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^1.19.1",
+    "typescript": "~3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
