--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.19.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-modal": "^3.11.1",
 		"react-redux": "^7.1.3",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
@@ -25,6 +26,7 @@
 		"@types/dlv": "^1.1.2",
 		"@types/enzyme": "^3.10.5",
 		"@types/react": "^16.9.19",
+		"@types/react-modal": "^3.10.5",
 		"@types/react-redux": "^7.1.7",
 		"@types/react-router-dom": "^5.1.3",
 		"@types/react-test-renderer": "^16.9.2",
@@ -47,7 +49,6 @@
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-react": "^7.18.3",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^25.1.0",
 		"prettier": "^1.19.1",
 		"react-test-renderer": "^16.12.0",
 		"redux-mock-store": "^1.5.4",
